2011-03-29  Adam Barth  <abarth@webkit.org>

        This test is flaky on Mac too.

        * platform/chromium/test_expectations.txt:

2011-03-29  Adam Barth  <abarth@webkit.org>

        Add missing expectation (looks like a pass).

        * platform/chromium/svg: Added.
        * platform/chromium/svg/custom: Added.
        * platform/chromium/svg/custom/use-in-symbol-with-offset-expected.checksum: Added.
        * platform/chromium/svg/custom/use-in-symbol-with-offset-expected.png: Added.

2011-03-29  Sergio Villar Senin  <svillar@igalia.com>

        Unreviewed, skipping a test failing on GTK+ bots.

        [GTK] fast/text/justify-ideograph-leading-expansion.html fails on bots
        https://bugs.webkit.org/show_bug.cgi?id=57346

        * platform/gtk/Skipped:

2011-03-29  Jessie Berlin  <jberlin@apple.com>

        webkit2 does not pass tests that require the window to be focused.
        https://bugs.webkit.org/show_bug.cgi?id=56988

        Unreviewed, update the WK2 expected results for pseudo-any.html after r82183.

        * platform/mac-wk2/fast/css/pseudo-any-expected.txt:
        * platform/win-wk2/fast/css/pseudo-any-expected.txt:

2011-03-29  Jessie Berlin  <jberlin@apple.com>

        Add another test that depends on EventSender to the mac-wk2 Skipped file.

        * platform/mac-wk2/Skipped:
        Add fast/events/mouse-relative-position.html.

2011-03-29  Adam Roben  <aroben@apple.com>

        Add Windows expected semi-failure results after r82189

        The test is passing, but we're failing to print out an error message so we don't match the
        expected results. Printing the error message is tracked by <http://webkit.org/b/57334>.

        * platform/win/http/tests/uri/username-with-no-hostname-expected.txt: Added.

2011-03-29  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Fix handling of the CSSAgent.setStyleSheetText() results in CSSStyleModel.js